Bubble sort example.

--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@ int main() {
 More examples:
 <ul>
 <li><a href="example2.html">Example 2 - Draw a binary tree</a></li>
+<li><a href="example3.html">Example 3 - Bubble sort visualization</a></li>
 </ul>
 </p>
 <hr>
