--- a/expressions_test.html
+++ b/expressions_test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<canvas id='anim_canvas_1' width='400' height='600'></canvas>
+<canvas id='anim_canvas_1' width='600' height='600'></canvas>
 <script>
 <!--
 var frame_counter = 0;
@@ -17,6 +17,7 @@ var wait_counter = 0;
 var num_wait_frames = 0;
 var no_clear = false;
 var repeat_current_frame = false;
+var expressions = {};
 
 function arc(ctx, x, y, r, sa, ea, fill) {
 	ctx.beginPath();
@@ -34,19 +35,21 @@ function draw_frgnd(ctx) {
 
 frames = [
 (function(ctx) {
-if(this.counter == null)
-	this.counter = 50;
-arc(ctx, 200, 200, this.counter, 0, 6.28319, false);
-if(this.counter < 100) {
-	this.counter += 1;
-	repeat_current_frame = true;
+if(expressions.coord_range_0 == null) expressions.coord_range_0 = 5;
+if(expressions.coord_range_1 == null) expressions.coord_range_1 = 10;
+arc(ctx, 200, 200, expressions.coord_range_0, 0.000000, 6.283185, false);
+arc(ctx, expressions.coord_range_1, 20, 10, 0.000000, 6.283185, false);
+if(expressions.coord_range_0 < 150) {
+expressions.coord_range_0 += 1;
+repeat_current_frame = true;
 }
-else {
-	this.counter = null;
+if(expressions.coord_range_1 < 50) {
+expressions.coord_range_1 += 1;
+repeat_current_frame = true;
 }
 }),
 (function(ctx) {
-arc(ctx, 300, 200, 50, 0, 6.28319, false);
+arc(ctx, 300, 200, 50, 0.000000, 6.283185, false);
 }),
 ];
 
@@ -60,8 +63,10 @@ window.onload = function() {
 		(frames[frame_counter])(ctx);
 		draw_frgnd(ctx);
 		wait_counter = (num_wait_frames == 0) ? 0 : ((wait_counter + 1) % num_wait_frames);
-		if(wait_counter == 0 && !repeat_current_frame)
+		if(wait_counter == 0 && !repeat_current_frame) {
 			frame_counter = (frame_counter + 1) % num_frames;
+			expressions = {};
+		}
 		window.requestAnimationFrame(drawFrame, canvas);
 	}());
 }
