--- a/test_t.html
+++ b/test_t.html
@@ -13,33 +13,68 @@
 <!--
 var canvas = document.getElementById('anim_canvas_1');
 
-function text(ctx, x, y, txt, fill) {
-	ctx.beginPath();
-	if(fill)
-		ctx.fillText(txt, x, y);
-	else
-		ctx.strokeText(txt, x, y);
-}
+var offscreens = [];
 
+function rect(ctx, x, y, w, h, fill) {
+	ctx.beginPath();
+	ctx.rect(x, y, w, h);
+	if(fill)
+		ctx.fill();
+	else
+		ctx.stroke();
+}
 layers = [
-{
-frame_counter: 0,
-no_clear: false,
-repeat_current_frame: false,
-expressions: {},
+{frame_counter: 0,
+no_clear : false,
+repeat_current_frame : false,
+expressions : {},
 frames: [
 (function(ctx, layer) {
-text(ctx, 20, 20, `1`, true);
+ctx.save();
+ctx.fillStyle = "red";
+rect(ctx, 0, 0, 800, 450, true);
+ctx.restore();
 }),
+],
+},
+{frame_counter: 0,
+no_clear : false,
+repeat_current_frame : false,
+expressions : {},
+frames: [
 (function(ctx, layer) {
-text(ctx, 20, 20, `2`, true);
-}),
-(function(ctx, layer) {
-text(ctx, 20, 20, `3`, true);
+if(layer.expressions.linear_range_0 == null) layer.expressions.linear_range_0 = 10;
+if(layer.expressions.linear_range_1 == null) layer.expressions.linear_range_1 = 15;
+if(layer.expressions.linear_range_2 == null) layer.expressions.linear_range_2 = 70;
+if(layer.expressions.linear_range_3 == null) layer.expressions.linear_range_3 = 75;
+rect(ctx, layer.expressions.linear_range_0, 15, 40, 40, false);
+rect(ctx, 70, layer.expressions.linear_range_1, 40, 40, true);
+rect(ctx, layer.expressions.linear_range_2, 75, 40, 40, false);
+rect(ctx, 10, layer.expressions.linear_range_3, 40, 40, true);
+if(layer.expressions.linear_range_0 < 70) {
+layer.expressions.linear_range_0 += 1;
+layer.repeat_current_frame = true;
+}
+if(layer.expressions.linear_range_1 < 75) {
+layer.expressions.linear_range_1 += 1;
+layer.repeat_current_frame = true;
+}
+if(layer.expressions.linear_range_2 > 10) {
+layer.expressions.linear_range_2 -= 1;
+layer.repeat_current_frame = true;
+}
+if(layer.expressions.linear_range_3 > 15) {
+layer.expressions.linear_range_3 -= 1;
+layer.repeat_current_frame = true;
+}
 }),
 ],
 },
 ];
+
+for(var i = 0; i < layers.length; i++) {
+	offscreens.push(document.createElement('canvas'));
+}
 
 function draw_layer(ctx, layer) {
 		if(layer.frame_counter == 0 || !layer.no_clear)
@@ -53,12 +88,16 @@ function draw_layer(ctx, layer) {
 }
 
 window.onload = function() {
-	var ctx = canvas.getContext('2d');
 	(function draw_canvas () {
 		const num_layers = layers.length;
 		for (var i = 0; i < num_layers; i++) {
+			var ctx = offscreens[i].getContext('2d');
 			var layer = layers[i];
 			draw_layer(ctx, layer);
+		}
+		var ctx = canvas.getContext('2d');
+		for (var i = 0; i < num_layers; i++) {
+			ctx.drawImage(offscreens[i], 0, 0);
 		}
 		window.requestAnimationFrame(draw_canvas, canvas);
 	}());
